Updated GLBatch